// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e native > 'vite-native' > css 1`] = `
"/*! tailwindcss v4.1.1 | MIT License | https://tailwindcss.com */
::before,
::after {
  --tw-content: '';
}
view,
text,
:before,
:after,
::backdrop {
  --tw-space-y-reverse: 0;
  --tw-space-x-reverse: 0;
  --tw-border-style: solid;
  --tw-gradient-position: initial;
  --tw-gradient-from: rgba(0, 0, 0, 0);
  --tw-gradient-via: rgba(0, 0, 0, 0);
  --tw-gradient-to: rgba(0, 0, 0, 0);
  --tw-gradient-stops: initial;
  --tw-gradient-via-stops: initial;
  --tw-gradient-from-position: 0%;
  --tw-gradient-via-position: 50%;
  --tw-gradient-to-position: 100%;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
page,
:host {
  --color-red-700: rgb(191, 0, 15);
  --color-amber-300: rgb(255, 210, 55);
  --spacing: 8rpx;
}
@supports (color: color(display-p3 0 0 0%)) {
  page,
  :host {
    --color-red-700: rgb(191, 0, 16);
    --color-amber-300: rgb(255, 210, 55);
  }

  @media (color-gamut: p3) {
    page,
    :host {
      --color-red-700: color(display-p3 0.69274 0.11623 0.10468);
      --color-amber-300: color(display-p3 0.97433 0.83063 0.33298);
    }
  }
}
view,
text,
:after,
:before,
::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.container {
  width: 100%;
}
@media (min-width: 40rem) {
  .container {
    max-width: 1280rpx;
  }
}
@media (min-width: 48rem) {
  .container {
    max-width: 1536rpx;
  }
}
@media (min-width: 64rem) {
  .container {
    max-width: 2048rpx;
  }
}
@media (min-width: 80rem) {
  .container {
    max-width: 2560rpx;
  }
}
@media (min-width: 96rem) {
  .container {
    max-width: 3072rpx;
  }
}
.i-mdi-home {
  width: 1em;
  height: 1em;
  -webkit-mask-image: var(--svg);
  mask-image: var(--svg);
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
  background-color: currentColor;
  display: inline-block;
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}
.inline-block {
  display: inline-block;
}
.h-10 {
  height: calc(var(--spacing) * 10);
}
.h-_29d292px_ {
  height: 29.292px;
}
.h-_30px_ {
  height: 30px;
}
.h-_45px_ {
  height: 45px;
}
.w-_50px_ {
  width: 50px;
}
.w-_323px_ {
  width: 323px;
}
.space-y-2d5 > view + view,
.space-y-2d5 > view + text,
.space-y-2d5 > text + view,
.space-y-2d5 > text + text {
  --tw-space-y-reverse: 0;
  margin-bottom: calc((var(--spacing) * 2.5) * var(--tw-space-y-reverse));
  margin-bottom: calc(calc(var(--spacing) * 2.5) * var(--tw-space-y-reverse));
  margin-top: calc((var(--spacing) * 2.5) * (1 - var(--tw-space-y-reverse)));
  margin-top: calc(calc(var(--spacing) * 2.5) * calc(1 - var(--tw-space-y-reverse)));
}
.space-x-2d5 > view + view,
.space-x-2d5 > view + text,
.space-x-2d5 > text + view,
.space-x-2d5 > text + text {
  --tw-space-x-reverse: 0;
  margin-right: calc((var(--spacing) * 2.5) * var(--tw-space-x-reverse));
  margin-right: calc(calc(var(--spacing) * 2.5) * var(--tw-space-x-reverse));
  margin-left: calc((var(--spacing) * 2.5) * (1 - var(--tw-space-x-reverse)));
  margin-left: calc(calc(var(--spacing) * 2.5) * calc(1 - var(--tw-space-x-reverse)));
}
.border-4 {
  border-style: var(--tw-border-style);
  border-width: 4px;
}
.bg-_h3a32d1_ {
  background-color: #3a32d1;
}
.bg-_h7d7ac2_ {
  background-color: #7d7ac2;
}
.bg-amber-300 {
  background-color: var(--color-amber-300);
}
.bg-gradient-to-b {
  --tw-gradient-position: to bottom;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.bg-gradient-to-t {
  --tw-gradient-position: to top;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.bg-gradient-to-tr {
  --tw-gradient-position: to top right;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-_h2f73f1_ {
  --tw-gradient-from: #2f73f1;
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.to-_h4bcefd_ {
  --tw-gradient-to: #4bcefd;
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.text-_100px_ {
  font-size: 100px;
}
.text-_h123456_ {
  color: #123456;
}
.text-_100rpx_ {
  color: 100rpx;
}
.text-red-700 {
  color: var(--color-red-700);
}
/*$vite$:1*/
"
`;

exports[`e2e native > 'vite-native' > json 1`] = `
"[]
"
`;

exports[`e2e native > 'vite-native' > wxml 1`] = `
"<scroll-view scroll-y="" type="list">
  <view class="space-y-2d5">
    <view class="bg-_h7d7ac2_ text-_100px_ text-_h123456_ w-_323px_ h-_30px_">111</view>
    <view class="bg-_h3a32d1_ text-_100rpx_ text-red-700 w-_323px_ h-_45px_">222</view>
    <view class="bg-gradient-to-b from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
    <view class="bg-gradient-to-t from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
    <view class="bg-gradient-to-tr from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
    <view class="space-x-2d5">
      <view class="inline-block h-10 w-_50px_ bg-amber-300 border-4"></view>
      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
    </view>
    <view class="i-mdi-home"></view>
  </view>
</scroll-view>
.luna-dom-highlighter{position:fixed;left:0;top:0;width:100%;height:100%;z-index:100000;pointer-events:none;font-size:13px}.luna-dom-highlighter-fill{position:absolute;top:0;right:0;bottom:0;left:0}.luna-dom-highlighter-platform-linux{font-family:Roboto,Ubuntu,Arial,sans-serif}.luna-dom-highlighter-platform-mac{color:#303942;font-family:'.SFNSDisplay-Regular','Helvetica
Neue','Lucida Grande',sans-serif}.luna-dom-highlighter-platform-windows{font-family:'Segoe
UI',Tahoma,sans-serif}.luna-dom-highlighter-px{color:gray}#luna-dom-highlighter-element-title{position:absolute;z-index:10}.luna-dom-highlighter-tooltip-content{position:absolute;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#fff;padding:5px
8px;border:1px solid #fff;border-radius:3px;box-sizing:border-box;min-width:100px;max-width:min(300px,100% -
4px);z-index:2;background-clip:padding-box;will-change:transform;text-rendering:optimizeLegibility;pointer-events:none;filter:drop-shadow(0 2px 4px
rgba(0,0,0,.35))}.luna-dom-highlighter-tooltip-content
.luna-dom-highlighter-tooltip-arrow{background:#fff;width:15px;height:8px;position:absolute}.luna-dom-highlighter-element-info-section{margin-top:12px;margin-bottom:6px}.luna-dom-highlighter-section-name{color:#333;font-weight:500;font-size:10px;text-transform:uppercase;letter-spacing:.05em;line-height:12px}.luna-dom-highlighter-element-info{display:flex;flex-direction:column}.luna-dom-highlighter-element-info-header{display:flex;align-items:center}.luna-dom-highlighter-element-info-body{display:flex;flex-direction:column;padding-top:2px;margin-top:2px}.luna-dom-highlighter-element-info-row{display:flex;line-height:19px}.luna-dom-highlighter-separator-container{display:flex;align-items:center;flex:auto;margin-left:7px}.luna-dom-highlighter-separator{border-top:1px
solid
#ddd;width:100%}.luna-dom-highlighter-element-info-name{flex-shrink:0;color:#666}.luna-dom-highlighter-element-info-gap{flex:auto}.luna-dom-highlighter-element-info-value-color{display:flex;color:#303942;margin-left:10px;align-items:baseline}.luna-dom-highlighter-a11y-icon{width:16px;height:16px;background-repeat:no-repeat;display:inline-block}.luna-dom-highlighter-element-info-value-contrast{display:flex;align-items:center;text-align:right;color:#303942;margin-left:10px}.luna-dom-highlighter-element-info-value-contrast
.luna-dom-highlighter-a11y-icon{margin-left:8px}.luna-dom-highlighter-element-info-value-icon{display:flex;align-items:center}.luna-dom-highlighter-element-info-value-text{text-align:right;color:#303942;margin-left:10px;align-items:baseline;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.luna-dom-highlighter-color-swatch{display:flex;margin-right:2px;width:10px;height:10px;background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);line-height:10px}.luna-dom-highlighter-color-swatch-inner{flex:auto;border:1px
solid
#808002}.luna-dom-highlighter-element-layout-type{margin-right:10px;width:16px;height:16px}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-grid{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-flex{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-description{flex:1
1;font-weight:700;word-wrap:break-word;word-break:break-all}.luna-dom-highlighter-dimensions{color:#737373;text-align:right;margin-left:10px}.luna-dom-highlighter-material-node-width{margin-right:2px}.luna-dom-highlighter-material-node-height{margin-left:2px}.luna-dom-highlighter-material-tag-name{color:#881280}.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id{color:#1a1aa6}.luna-dom-highlighter-contrast-text{width:16px;height:16px;text-align:center;line-height:16px;margin-right:8px;border:1px
solid #000;padding:0
1px}.luna-dom-highlighter-a11y-icon-not-ok{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-warning{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-ok{background-image:url('data:image/svg+xml,')}@media
(forced-colors:active){:root,body{background-color:transparent;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content{border-color:Highlight;background-color:canvas;color:text;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content::after{background-color:Highlight}.luna-dom-highlighter-color-swatch-inner,.luna-dom-highlighter-contrast-text,.luna-dom-highlighter-separator{border-color:Highlight}.luna-dom-highlighter-section-name{color:Highlight}.luna-dom-highlighter-dimensions,.luna-dom-highlighter-element-info-name,.luna-dom-highlighter-element-info-value-color,.luna-dom-highlighter-element-info-value-contrast,.luna-dom-highlighter-element-info-value-icon,.luna-dom-highlighter-element-info-value-text,.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id,.luna-dom-highlighter-material-tag-name{color:canvastext}}.luna-dom-highlighter{z-index:2147483647;}
"
`;

exports[`e2e native > 'vite-native-ts' > css 1`] = `
"::before,
::after {
  --tw-content: '';
}
view,
text,
:before,
:after {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-ring-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow-colored: 0 0 rgba(0, 0, 0, 0);
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  --tw-contain-size: ;
  --tw-contain-layout: ;
  --tw-contain-paint: ;
  --tw-contain-style: ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-ring-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow-colored: 0 0 rgba(0, 0, 0, 0);
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  --tw-contain-size: ;
  --tw-contain-layout: ;
  --tw-contain-paint: ;
  --tw-contain-style: ;
}
.weapp-reset-button {
  padding: 0;
  background-color: transparent;
  background-color: initial;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}
.weapp-reset-button:after {
  border: none;
}
.mt-4 {
  margin-top: 32rpx;
}
.flex {
  display: flex;
}
.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
    scaleY(var(--tw-scale-y));
}
.cursor-not-allowed {
  cursor: not-allowed;
}
.divide-x > view + view,
.divide-x > view + text,
.divide-x > text + view,
.divide-x > text + text {
  --tw-divide-x-reverse: 0;
  border-right-width: calc(1px * var(--tw-divide-x-reverse));
  border-left-width: calc(1px * (1 - var(--tw-divide-x-reverse)));
  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
}
.overflow-hidden {
  overflow: hidden;
}
.rounded {
  border-radius: 8rpx;
}
.rounded-lg {
  border-radius: 16rpx;
}
.border {
  border-width: 1px;
}
.border-gray-400 {
  --tw-border-opacity: 1;
  border-color: rgba(156, 163, 175, var(--tw-border-opacity, 1));
}
.border-transparent {
  border-color: transparent;
}
.bg-_h123456_ {
  --tw-bg-opacity: 1;
  background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
}
.bg-_hB91C1C_ {
  --tw-bg-opacity: 1;
  background-color: rgba(185, 28, 28, var(--tw-bg-opacity, 1));
}
.bg-_hd72929_ {
  --tw-bg-opacity: 1;
  background-color: rgba(215, 41, 41, var(--tw-bg-opacity, 1));
}
.bg-_green_ {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 128, 0, var(--tw-bg-opacity, 1));
}
.bg-_orange_ {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 165, 0, var(--tw-bg-opacity, 1));
}
.bg-_pink_ {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 192, 203, var(--tw-bg-opacity, 1));
}
.bg-blue-500 {
  --tw-bg-opacity: 1;
  background-color: rgba(59, 130, 246, var(--tw-bg-opacity, 1));
}
.bg-blue-600 {
  --tw-bg-opacity: 1;
  background-color: rgba(37, 99, 235, var(--tw-bg-opacity, 1));
}
.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity, 1));
}
.p-3 {
  padding: 24rpx;
}
.p-4 {
  padding: 32rpx;
}
.px-2 {
  padding-left: 16rpx;
  padding-right: 16rpx;
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
}
.px-6 {
  padding-left: 48rpx;
  padding-right: 48rpx;
}
.py-1 {
  padding-top: 8rpx;
  padding-bottom: 8rpx;
}
.py-2 {
  padding-top: 16rpx;
  padding-bottom: 16rpx;
}
.py-6 {
  padding-top: 48rpx;
  padding-bottom: 48rpx;
}
.text-base {
  font-size: 32rpx;
  line-height: 48rpx;
}
.text-sm {
  font-size: 28rpx;
  line-height: 40rpx;
}
.font-medium {
  font-weight: 500;
}
.font-semibold {
  font-weight: 600;
}
.uppercase {
  text-transform: uppercase;
}
.capitalize {
  text-transform: capitalize;
}
.tracking-wide {
  letter-spacing: 0.025em;
}
.text-_h0000ff_ {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 255, var(--tw-text-opacity, 1));
}
.text-gray-600 {
  --tw-text-opacity: 1;
  color: rgba(75, 85, 99, var(--tw-text-opacity, 1));
}
.text-gray-800 {
  --tw-text-opacity: 1;
  color: rgba(31, 41, 55, var(--tw-text-opacity, 1));
}
.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
}
.opacity-50 {
  opacity: 0.5;
}
.transition-colors {
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
}
.duration-200 {
  transition-duration: 0.2s;
}
.duration-300 {
  transition-duration: 0.3s;
}
.focuscoutline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}
.focuscring:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0, 0, 0, 0));
}
.focuscring-blue-300:focus {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgba(147, 197, 253, var(--tw-ring-opacity, 1));
}
.focuscring-opacity-80:focus {
  --tw-ring-opacity: 0.8;
}
@media (min-width: 640px) {
  .smcpx-6 {
    padding-left: 48rpx;
    padding-right: 48rpx;
  }
  .smctext-base {
    font-size: 32rpx;
    line-height: 48rpx;
  }
}
@media (prefers-color-scheme: dark) {
  .darkcdivide-gray-700 > view + view,
  .darkcdivide-gray-700 > view + text,
  .darkcdivide-gray-700 > text + view,
  .darkcdivide-gray-700 > text + text {
    --tw-divide-opacity: 1;
    border-color: rgba(55, 65, 81, var(--tw-divide-opacity, 1));
  }
  .darkcborder-gray-700 {
    --tw-border-opacity: 1;
    border-color: rgba(55, 65, 81, var(--tw-border-opacity, 1));
  }
  .darkcbg-gray-900 {
    --tw-bg-opacity: 1;
    background-color: rgba(17, 24, 39, var(--tw-bg-opacity, 1));
  }
  .darkctext-gray-300 {
    --tw-text-opacity: 1;
    color: rgba(209, 213, 219, var(--tw-text-opacity, 1));
  }
}
/*$vite$:1*/
"
`;

exports[`e2e native > 'vite-native-ts' > json 1`] = `
"[
  "bg-[#123456]",
  "bg-[#d72929]",
  "bg-[green]",
  "bg-[orange]",
  "bg-[pink]",
  "bg-blue-600",
  "border",
  "capitalize",
  "dark:bg-gray-900",
  "dark:border-gray-700",
  "dark:divide-gray-700",
  "dark:hover:bg-gray-800",
  "dark:text-gray-300",
  "divide-x",
  "duration-200",
  "duration-300",
  "flex",
  "focus:outline-none",
  "focus:ring",
  "focus:ring-blue-300",
  "focus:ring-opacity-80",
  "font-medium",
  "hover:bg-blue-500",
  "hover:bg-gray-100",
  "mt-4",
  "overflow-hidden",
  "p-4",
  "px-4",
  "px-6",
  "py-2",
  "py-6",
  "rounded-lg",
  "sm:px-6",
  "sm:text-base",
  "text-gray-600",
  "text-sm",
  "text-white",
  "tracking-wide",
  "transform",
  "transition-colors",
  "weapp-reset-button"
]
"
`;

exports[`e2e native > 'vite-native-ts' > wxml 1`] = `
"<view class="p-4">
  <view>
    <button
      class="weapp-reset-button index--weapp-reset-button text-_h0000ff_ index--text-_h0000ff_ px-6 index--px-6 py-2 index--py-2 font-medium index--font-medium tracking-wide index--tracking-wide capitalize index--capitalize transition-colors index--transition-colors duration-300 index--duration-300 transform index--transform rounded-lg index--rounded-lg hovercbg-blue-500 index--hovercbg-blue-500 focuscoutline-none index--focuscoutline-none focuscring index--focuscring focuscring-blue-300 index--focuscring-blue-300 focuscring-opacity-80 index--focuscring-opacity-80 bg-_orange_ index--bg-_orange_"
      hover-class="bg-_h123456_"
      role="button"
      aria-disabled="false">
      Primary
    </button>
    <view
      class="mt-4 index--mt-4 flex index--flex overflow-hidden index--overflow-hidden border index--border divide-x index--divide-x rounded-lg index--rounded-lg darkcbg-gray-900 index--darkcbg-gray-900 darkcborder-gray-700 index--darkcborder-gray-700 darkcdivide-gray-700 index--darkcdivide-gray-700 py-6 index--py-6">
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        Upload
      </button>
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        Drift
      </button>
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        View
      </button>
    </view>
  </view>
</view>
.luna-dom-highlighter{position:fixed;left:0;top:0;width:100%;height:100%;z-index:100000;pointer-events:none;font-size:13px}.luna-dom-highlighter-fill{position:absolute;top:0;right:0;bottom:0;left:0}.luna-dom-highlighter-platform-linux{font-family:Roboto,Ubuntu,Arial,sans-serif}.luna-dom-highlighter-platform-mac{color:#303942;font-family:'.SFNSDisplay-Regular','Helvetica
Neue','Lucida Grande',sans-serif}.luna-dom-highlighter-platform-windows{font-family:'Segoe
UI',Tahoma,sans-serif}.luna-dom-highlighter-px{color:gray}#luna-dom-highlighter-element-title{position:absolute;z-index:10}.luna-dom-highlighter-tooltip-content{position:absolute;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#fff;padding:5px
8px;border:1px solid #fff;border-radius:3px;box-sizing:border-box;min-width:100px;max-width:min(300px,100% -
4px);z-index:2;background-clip:padding-box;will-change:transform;text-rendering:optimizeLegibility;pointer-events:none;filter:drop-shadow(0 2px 4px
rgba(0,0,0,.35))}.luna-dom-highlighter-tooltip-content
.luna-dom-highlighter-tooltip-arrow{background:#fff;width:15px;height:8px;position:absolute}.luna-dom-highlighter-element-info-section{margin-top:12px;margin-bottom:6px}.luna-dom-highlighter-section-name{color:#333;font-weight:500;font-size:10px;text-transform:uppercase;letter-spacing:.05em;line-height:12px}.luna-dom-highlighter-element-info{display:flex;flex-direction:column}.luna-dom-highlighter-element-info-header{display:flex;align-items:center}.luna-dom-highlighter-element-info-body{display:flex;flex-direction:column;padding-top:2px;margin-top:2px}.luna-dom-highlighter-element-info-row{display:flex;line-height:19px}.luna-dom-highlighter-separator-container{display:flex;align-items:center;flex:auto;margin-left:7px}.luna-dom-highlighter-separator{border-top:1px
solid
#ddd;width:100%}.luna-dom-highlighter-element-info-name{flex-shrink:0;color:#666}.luna-dom-highlighter-element-info-gap{flex:auto}.luna-dom-highlighter-element-info-value-color{display:flex;color:#303942;margin-left:10px;align-items:baseline}.luna-dom-highlighter-a11y-icon{width:16px;height:16px;background-repeat:no-repeat;display:inline-block}.luna-dom-highlighter-element-info-value-contrast{display:flex;align-items:center;text-align:right;color:#303942;margin-left:10px}.luna-dom-highlighter-element-info-value-contrast
.luna-dom-highlighter-a11y-icon{margin-left:8px}.luna-dom-highlighter-element-info-value-icon{display:flex;align-items:center}.luna-dom-highlighter-element-info-value-text{text-align:right;color:#303942;margin-left:10px;align-items:baseline;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.luna-dom-highlighter-color-swatch{display:flex;margin-right:2px;width:10px;height:10px;background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);line-height:10px}.luna-dom-highlighter-color-swatch-inner{flex:auto;border:1px
solid
#808002}.luna-dom-highlighter-element-layout-type{margin-right:10px;width:16px;height:16px}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-grid{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-flex{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-description{flex:1
1;font-weight:700;word-wrap:break-word;word-break:break-all}.luna-dom-highlighter-dimensions{color:#737373;text-align:right;margin-left:10px}.luna-dom-highlighter-material-node-width{margin-right:2px}.luna-dom-highlighter-material-node-height{margin-left:2px}.luna-dom-highlighter-material-tag-name{color:#881280}.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id{color:#1a1aa6}.luna-dom-highlighter-contrast-text{width:16px;height:16px;text-align:center;line-height:16px;margin-right:8px;border:1px
solid #000;padding:0
1px}.luna-dom-highlighter-a11y-icon-not-ok{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-warning{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-ok{background-image:url('data:image/svg+xml,')}@media
(forced-colors:active){:root,body{background-color:transparent;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content{border-color:Highlight;background-color:canvas;color:text;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content::after{background-color:Highlight}.luna-dom-highlighter-color-swatch-inner,.luna-dom-highlighter-contrast-text,.luna-dom-highlighter-separator{border-color:Highlight}.luna-dom-highlighter-section-name{color:Highlight}.luna-dom-highlighter-dimensions,.luna-dom-highlighter-element-info-name,.luna-dom-highlighter-element-info-value-color,.luna-dom-highlighter-element-info-value-contrast,.luna-dom-highlighter-element-info-value-icon,.luna-dom-highlighter-element-info-value-text,.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id,.luna-dom-highlighter-material-tag-name{color:canvastext}}.luna-dom-highlighter{z-index:2147483647;}
"
`;

exports[`e2e native > 'web-postcss7-compat' > css 1`] = `
".h-\\[121px\\] {
  height: 121px;
}
.w-\\[99px\\] {
  width: 99px;
}
"
`;

exports[`e2e native > 'web-postcss7-compat' > json 1`] = `
"[]
"
`;
